0.29  (not yet released)
    (ms) Added github repository link to Makefile.PL

0.28 (11/05/2009)
    (ms) Applied patch by Lyle Brooks, adding optional step, start, and
         end parameters to "draw".

0.27 (10/11/2009)
    (ms) Slaven Rezic reported huge memory consumption by the test suite,
         turned out to be fetch_start() call spanning several years. 
         Fixed by defining the end time as well as the start time.

0.26 (09/27/2009)
    (ms) [RT 32601] Using prompt() instead of manually asking for input 
         in Makefile.PL (by Fabien Wernli)
    (ms) [RT 32046] Calling setlocale() to fix error message check in 
         foreign locales (by Fabien Wernli)
    (ms) Implemented graphv method. This works just like graph() but uses 
         rrdtool's graphv internally, giving access to additional 
         information using print_results() method (by Fabien Wernli)
    (ms) Improved RRDs version testing (by Fabien Wernli).

0.25 (04/25/2009)
    (ms) Applied patch by Christian Dengler, adding the 'hrule' graph
         parameter and increasing the sleep time in 002Pod.t to two
         secs to prevent system clock inacurracies from causing
         test failures.

0.24 (04/02/2009)
    (ms) Added support for capturing PRINT output as suggested by
         Peter Mistich. print_output() now returns a ref to an array
         with the output of the last graph() command's PRINT output.

0.23 (02/05/2009)
    (ms) update() now accepts DateTime objects as well (suggested by 
         Jay Buffington)
    (ms) [rt.cpan.org #43011] Fixed rounding error on 64-bit systems
         reported by Todd E. Rinaldo

0.22 (05/20/2008)
    (ms) Added aberrant behavior detection (hwpredict) with documentation
         and test cases.

0.21 (01/23/2008)
    (ms) Provided backwards compatibility to rrdtool-1.0 for 
         draw/type=stack, which now translates to an area with the 
         :STACK option.

0.20 (01/22/2008)